# wisper_typer

./: LICENSE  README.md  install_service.sh  publish.sh  pyproject.toml  setup.sh
.github/workflows/: workflow.yml
src/wisper_typer/: main.py  wisper_typer.service
src/wisper_typer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wiki/: API-Setup.md  Advanced-Configuration.md  Configuration.md  Home.md  Installation.md  Systemd-Service.md  Troubleshooting.md  Usage-Guide.md
